tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_or_pattern_4__unreachable_case_or_pattern_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Foo = A(Foo) | B

let spam
  : Foo -> String
  =
  -> A(x) | A(A(x) | A(A(x))) ["test"]
  ["Nope"]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_or_pattern_4/unreachable_case_or_pattern_4.kk:6:13
  │
6 │   -> A(x) | A(A(x) | A(A(x))) ["test"]
  │             ^^^^^ Partially unreachable case
  │
  = This case is partially unreachable because it contains a redundant pattern that is already handled by previous cases.
    Namely:

        A(A(x))
